did all the stuff

--- a/index.html
+++ b/index.html
@@ -3,14 +3,258 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/input.css">
-    <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans" rel="stylesheet">
+    <title>TOOTS TINTS</title>
   </head>
   <body>
     <section class="wrapper">
+      <div class="row row-4">
+          <h1>Colors</h1> <hr>
+      </div>
+      <div class="row row-1">
+        <h2>Primary Colors</h2>
+        <div class="bg-mint column-3"></div>
+        <div class="bg-teal column-3"></div>
+        <div class="bg-gold column-3"></div>
+        <div class="bg-tomato column-3"></div>
+      </div>
+      <div class="row text row-1">
+        <div class="column-3">
+          <ul class="no-style list-left">
+            <li>Name:</li>
+            <li>RGB:</li>
+            <li>HSL:</li>
+          </ul>
+          <ul class="no-style list-right">
+            <li>Mint</li>
+            <li>217 / 245 / 232</li>
+            <li>152deg / 58% / 91%</li>
+          </ul>
+        </div>
+        <div class="column-3">
+          <ul class="no-style list-left">
+            <li>Name:</li>
+            <li>RGB:</li>
+            <li>HSL:</li>
+          </ul>
+          <ul class="no-style list-right">
+            <li>Teal</li>
+            <li>55 / 203 / 194</li>
+            <li>176deg / 69% / 51%</li>
+          </ul>
+        </div>
+        <div class="column-3">
+          <ul class="no-style list-left">
+            <li>Name:</li>
+            <li>RGB:</li>
+            <li>HSL:</li>
+          </ul>
+          <ul class="no-style list-right">
+            <li>Gold</li>
+            <li>255 / 187 / 51</li>
+            <li>40deg / 100% / 60%</li>
+          </ul>
+        </div>
+        <div class="column-3">
+          <ul class="no-style list-left">
+            <li>Name:</li>
+            <li>RGB:</li>
+            <li>HSL:</li>
+          </ul>
+          <ul class="no-style list-right">
+            <li>Tomato</li>
+            <li>255 / 99 / 71</li>
+            <li>9deg / 100% / 64%</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row tints">
+        <h2>Tints and Tones</h2>
+        <p>These colors are lighter and darker variations of our main brand colors. These are especially helpful for hover ststes, illustrations, and other small variations.</p>
+        <div class="column-3">
+          <div class="light-mint column-4"></div>
+          <div class="bg-mint column-4"></div>
+          <div class="dark-mint column-4"></div>
+        </div>
+        <div class="column-3">
+          <div class="light-teal column-4"></div>
+          <div class="bg-teal column-4"></div>
+          <div class="dark-teal column-4"></div>
+        </div>
+        <div class="column-3">
+          <div class="light-gold column-4"></div>
+          <div class="bg-gold column-4"></div>
+          <div class="dark-gold column-4"></div>
+        </div>
+        <div class="column-3">
+          <div class="light-tomato column-4"></div>
+          <div class="bg-tomato column-4"></div>
+          <div class="dark-tomato column-4"></div>
+        </div>
+      </div>
       <div class="row">
-        <div class="column-3"></div>
-        <div class="column-3"></div>
-        <div class="column-6"></div>
+        <h2>Generated Colors</h2>
+        <p>These colors are derived from combinations with other brand colors. These may be used as accents in illustrations and other design work, though they should not overpower our main brand colors. The official brand colors are displayed first for easy reference.</p>
+        <div class="row text">
+          <div class="column-3">
+            <h3>Mint</h3>
+          </div>
+          <div class="column-3">
+            <h3>Teal</h3>
+          </div>
+          <div class="column-3">
+            <h3>Gold</h3>
+          </div>
+          <div class="column-3">
+            <h3>Tomato</h3>
+          </div>
+
+        </div>
+        <div class="bg-mint column-3"></div>
+        <div class="bg-teal column-3"></div>
+        <div class="bg-gold column-3"></div>
+        <div class="bg-tomato column-3"></div>
+      </div>
+
+      <div class="row mix">
+        <div class="column-3">
+          <p>Mixed with 65% Mint</p>
+        </div>
+        <div class="column-3">
+          <p>Mixed with 65% Mint</p>
+        </div>
+        <div class="column-3">
+          <p>Mixed with 65% Mint</p>
+        </div>
+        <div class="column-3">
+          <p>Mixed with 65% Mint</p>
+        </div>
+        <div class="column-3 mintmix-mint"></div>
+        <div class="column-3 mintmix-teal"></div>
+        <div class="column-3 mintmix-gold"></div>
+        <div class="column-3 mintmix-tomato"></div>
+      </div>
+      <div class="row mix">
+        <div class="column-3">
+          <p>Mixed with 65% Teal</p>
+        </div>
+        <div class="column-3">
+          <p>Mixed with 65% Teal</p>
+        </div>
+        <div class="column-3">
+          <p>Mixed with 65% Teal</p>
+        </div>
+        <div class="column-3">
+          <p>Mixed with 65% Teal</p>
+        </div>
+        <div class="column-3 tealmix-mint"></div>
+        <div class="column-3 tealmix-teal"></div>
+        <div class="column-3 tealmix-gold"></div>
+        <div class="column-3 tealmix-tomato"></div>
+      </div>
+      <div class="row mix">
+        <div class="column-3">
+          <p>Mixed with 65% Gold</p>
+        </div>
+        <div class="column-3">
+          <p>Mixed with 65% Gold</p>
+        </div>
+        <div class="column-3">
+          <p>Mixed with 65% Gold</p>
+        </div>
+        <div class="column-3">
+          <p>Mixed with 65% Gold</p>
+        </div>
+        <div class="column-3 goldmix-mint"></div>
+        <div class="column-3 goldmix-teal"></div>
+        <div class="column-3 goldmix-gold"></div>
+        <div class="column-3 goldmix-tomato"></div>
+      </div>
+      <div class="row mix">
+        <div class="column-3">
+          <p>Mixed with 65% Tomato</p>
+        </div>
+        <div class="column-3">
+          <p>Mixed with 65% Tomato</p>
+        </div>
+        <div class="column-3">
+          <p>Mixed with 65% Tomato</p>
+        </div>
+        <div class="column-3">
+          <p>Mixed with 65% Tomato</p>
+        </div>
+        <div class="column-3 tomatomix-mint"></div>
+        <div class="column-3 tomatomix-teal"></div>
+        <div class="column-3 tomatomix-gold"></div>
+        <div class="column-3 tomatomix-tomato"></div>
+      </div>
+    </section>
+    <section class="wrapper">
+      <h1>Typography</h1><hr>
+      <p><strong>Open Sans</strong> is used as our primary typeface and <strong>Bree Serif</strong> is used as an accent for headings and other special purposes.</p>
+      <div class="row">
+        <h1 class="huge">Open Sans</h1>
+        <h1 class="huge-sub"><span class="text-mint huge-sub">Aa</span> <span class="text-teal huge-sub">Bb</span> <span class="text-gold huge-sub">Cc</span> <span class="text-tomato huge-sub">Dd</span> <span>0123456789</span></h1>
+      </div>
+      <div class="row">
+        <h1 class="huge2">Bree Serif</h1>
+        <h1><span class="text-mint huge-sub2">Aa</span> <span class="text-teal huge-sub2">Bb</span> <span class="text-gold huge-sub2">Cc</span> <span class="text-tomato huge-sub2">Dd</span> <span>0123456789</span></h1>
+      </div>
+      <div class="row">
+        <div class="column-1">
+          <p>H1</p>
+        </div>
+        <div class="column-11">
+          <h1 class="text-teal huge-sub2">The quick brown fox jumps over the lazy dog.</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column-1">
+          <p>H2</p>
+        </div>
+        <div class="column-11">
+          <h2 class="huge-sub">AMAZINGLY FEW DISCOTHEQUES PROVIDE JUKEBOXES</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column-1">
+          <p>H3</p>
+        </div>
+        <div class="column-11">
+          <h3 class="huge-sub2">A WIZARD'S JOB IS TO VEX CHUMPS QUICKLY IN FOG</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column-1">
+          <p>H4</p>
+        </div>
+        <div class="column-11">
+          <h4 class="teal-mix-text-gold">Bright vixens jump, dozy fowl quack</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column-1">
+          <p>H5</p>
+        </div>
+        <div class="column-11">
+          <h5><strong>jackdaws love my big sphinx of quartz</strong></h5>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column-1">
+          <p>H6</p>
+        </div>
+        <div class="column-11">
+          <h6>PACK MY BOX WITH FIVE DOZEN LIQUOR JUGS</h6>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column-1">
+          <p>p</p>
+        </div>
+        <div class="column-11">
+          <p>By jove, my quick study of lexicography won a prize! Painful zombies quickly watch a jinxed graveyard. Grumpy wizards make a toxic brew for the jovial queen. A quick movement of the enemy will jeopordize six gunboats. jackie will budget for the most expensive zoology equipment. Jim quickly realzied that the beautiful gowns are expensive, then a cop quizzed Mick Jagger's ex-wives breifly.</p>
+        </div>
       </div>
     </section>
   </body>
