--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       </div>
       <div class="row">
         <h1 class="huge2">Bree Serif</h1>
-        <h1><span class="text-mint huge-sub2">Aa</span> <span class="text-teal huge-sub2">Bb</span> <span class="text-gold huge-sub2">Cc</span> <span class="text-tomato huge-sub2">Dd</span> <span>0123456789</span></h1>
+        <h1 class="space"><span class="text-mint huge-sub2">Aa</span> <span class="text-teal huge-sub2">Bb</span> <span class="text-gold huge-sub2">Cc</span> <span class="text-tomato huge-sub2">Dd</span> <span>0123456789</span></h1>
       </div>
       <div class="row">
         <div class="column-1">
